# bodix_chygak

./: CMakeLists.txt  main.cpp
build-chygak-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  chygak_lab  cmake_install.cmake
build-chygak-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-e1ce7ac6b990287af93e.json  cmakeFiles-v1-918874c5eaecdad03ef8.json  codemodel-v2-c1f6ff3a3e0e921a399f.json  index-2020-11-08T16-33-17-0600.json  target-chygak_lab-Debug-ce3ecba01ffb4948cd3d.json
src/: help_elems.hpp  lib.cpp  lib.hpp  lib_realiz.hpp
tests/: test.cpp
